welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:int=0
var dejaFait:int=1
while  ( nbPas < dejaFait ){
	avance();
	nbPas=nbPas+1;
}
